syntax = "proto3";

package pmetrics;

option go_package = "github.com/hrapovd1/pmetrics/internal/proto";

message MetricRequest {
	bytes metric = 1; // метрика в JSON формате
}

message MetricResponse {
	string error = 1;
}

message EncMetric {
	string data0 = 1; // зашифрованный сеансовый ключ
	string data = 2; // зашифрованные данные
}

message EncMetricRequest {
	EncMetric data = 1;
}

service Metrics {
	rpc ReportMetric(MetricRequest) returns (MetricResponse);
	rpc ReportEncMetric(EncMetricRequest) returns (MetricResponse);

	rpc ReportMetrics(stream MetricRequest) returns (MetricResponse);
	rpc ReportEncMetrics(stream EncMetricRequest) returns (MetricResponse);
}